[Fix] Fix non visible arrow down in mobile

--- a/src/styles/ResponsiveHero.module.css
+++ b/src/styles/ResponsiveHero.module.css
@@ -87,4 +87,8 @@ h2 {
   h2 {
     font-size: 2rem;
   }
+
+  .arrow-down {
+    bottom: 10%;
+  }
 }
